# furry-emblem-old

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  build.rs
engine/: Cargo.toml  build.rs
engine/src/: console.rs  main.rs  tools.rs
engine/src/assets/levels/: debug-level.tmx
engine/src/assets/levels/tilesets/: unit-icons.tsx
level-converter/: Cargo.toml
level-converter/src/: lib.rs  main.rs
src/: console.rs  game.rs  main.rs  tools.rs  transform.rs
src/assets/: classes.toml
src/assets/levels/: debug-level.tmx
src/assets/levels/tilesets/: debug-tileset.tsx  unit-icons.tsx
src/assets/maps/: Debug Map.toml
tools/level-converter/: Cargo.toml
tools/level-converter/src/: lib.rs
