[package]
name = "furry-emblem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gba = { version = "0.10", git = "https://github.com/rust-console/gba" }
voladdress = "1.2.1"

[build-dependencies]
evgfx = { git = "https://github.com/eievui5/evgfx" }
fe-data = { git = "https://github.com/eievui5/fe-data/" }

[profile.release]
lto = true
